# smart-writer-book

./: LICENSE  README.md
backend/: .gitignore  README.md  download_nltk.py  pyproject.toml
backend/api/: admin.py  urls.py
backend/api/migrations/: 0001_initial.py  0002_alter_aifeedback_options_alter_document_options_and_more.py  0003_alter_document_author_alter_document_content.py  0004_alter_document_content.py
backend/api/models/: __init__.py  base.py  document.py  user.py
backend/api/serializers/: __init__.py  document.py  user.py
backend/api/views/: __init__.py  ai_views.py  document.py  user.py
backend/core/: settings.py  urls.py
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.scss  app.component.ts  app.routes.ts
frontend/src/app/components/layout/: layout.component.html  layout.component.scss  layout.component.ts
frontend/src/app/components/sidebar/: sidebar.component.html  sidebar.component.scss  sidebar.component.ts
frontend/src/app/components/writer/: quill.config.ts  writer.component.css  writer.component.html  writer.component.ts
frontend/src/app/config/: quill.config.ts
frontend/src/app/services/: ai.service.ts  writer.service.ts
